@@ -6,4 +6,12 @@
 	BufferLines = 1000;
 	WrapIndent = "0.0";
 	DefaultQuitMessage = "[TalkSoup] Get it today: http://talksoup.sf.net";
+
+	Aliases = {
+		j = "/join";
+		charset = "/encoding";
+		p = "/part";
+		q = "/quit";
+		c = "/close";
+	};
 }
